Bug 397436 - Net worth forecast graph in new file shows formatting problem
Summary: Net worth forecast graph in new file shows formatting problem
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-13 21:47 UTC by Jack
Modified: 2018-08-21 12:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments
Picture of odd/overlapped Net Worth Forecast graph from home page of new kmy file (45.00 KB, image/png)
2018-08-13 21:47 UTC, Jack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2018-08-13 21:47:45 UTC
Created attachment 114424 [details]
Picture of odd/overlapped Net Worth Forecast graph from home page of new kmy file

For a different bug, I just created a new kmy file, with one checking account with $100 opening balance.  On the home page, the Net Worth Foredast graph shows several months of date (x axis) on one line, with the graph title overlaid on the same line, all at the top of the graph, and also overlaid with what looks like some part of the Y axis.  I'll attach a screenshot.  It looks like perhaps an odd formatting issue if there is no data in the graph, or perhaps no change in Y value for the entire graph.
Comment 1 Thomas Baumgart 2018-08-21 12:15:53 UTC
Git commit a1a110e59dd6230fd6613b30b57d01ca83efcd25 by Thomas Baumgart.
Committed on 21/08/2018 at 12:16.
Pushed by tbaumgart into branch 'master'.

Improve display of line graphs showing a horizontal line

When the whole line graph consisted of a horizontal line then the Y
range of the chart was not correctly calculated. This fix takes care of
the scenario by artificially extending the Y range resulting in a
readable graph.
FIXED-IN: 5.0.2

M  +10   -0    kmymoney/plugins/views/reports/core/kreportchartview.cpp

https://commits.kde.org/kmymoney/a1a110e59dd6230fd6613b30b57d01ca83efcd25