Improve display of line graphs showing a horizontal line

When the whole line graph consisted of a horizontal line then the Y
range of the chart was not correctly calculated. This fix takes care of
the scenario by artificially extending the Y range resulting in a
readable graph.

BUG: 397436
FIXED-IN: 5.0.2